# rules-go-race-coverage

./: BUILD.bazel  README.md  WORKSPACE
foo/: BUILD.bazel  foo_test.go
